# SPINIX

./: .gitignore  LICENSE  README.md
SpinMobile/: README.md
SpinMobile/iOS/SPINIX.xcodeproj/: project.pbxproj
SpinMobile/iOS/SPINIX.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
SpinMobile/iOS/Spinix/: ContentView.swift  Model.swift  SpinixApp.swift
SpinRX/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
SpinRX/Layouts/: Layouts.af
SpinRX/main/: CMakeLists.txt  data.h  idf_component.yml  img_bitmap.c  img_bitmap.h  main.c  pins.h
SpinRX/main/tasks/: task_ble.c  task_buttons.c  task_display.c  task_display.h  task_rgb_led.c  task_rgb_led.h
SpinTX/: README.md  sdkconfig  sdkconfig.old
SpinTX/.lsp/.cache/: db.transit.json
SpinTX/main/: CMakeLists.txt  aht10.c  buttons.c  buttons.h  data.c  data.h  idf_component.yml  ld2410c.c  ld2410c.h  main.c  pins.h  sensors.h  settings.c  settings.h  soil_moist_cap.h  storage.c  storage.h
SpinTX/main/sensors/: aht10.h  aht20.c  aht20.h  hall.c  hall.h  ld2410c.h  nmea_parser.c  nmea_parser.h  soil_moist_cap.c
SpinTX/main/tasks/: task_ble.c  task_ble.h  task_buttons.h  task_display.c  task_gps.c  task_gps.h  task_rgb_led.c  task_rgb_led.h  task_speed_cadence.c  task_speed_cadence.h  task_storage.c  task_storage.h  task_weather.c  task_weather.h
