idf_component_register(
    SRCS
        "${srcs}"
        "main.c"
        "data.c"
        "settings.c"
        "storage.c"
        "sensors/aht20.c"
        "sensors/ld2410c.c"
        "sensors/nmea_parser.c"
        "sensors/hall.c"
        "tasks/task_ble.c"
        "tasks/task_buttons.c"
        "tasks/task_rgb_led.c"
        "tasks/task_storage.c"
        "tasks/task_gps.c"
        "tasks/task_weather.c"
        "tasks/task_speed_cadence.c"
    INCLUDE_DIRS
        "."
        "sensors"
        "tasks"
    PRIV_REQUIRES
        bt
        nvs_flash
        esp_driver_i2c
    REQUIRES
        esp_driver_gpio
        esp_driver_uart
        esp_driver_spi
        spi_flash
        esp_partition
        joltwallet__littlefs
        esp_adc
        aht
        rc_ble
)